--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,13 @@
   <button class="btn-filter" data-filter=".Wearables">Wearables</button>
   <button class="btn-filter" data-filter=".MR">MR</button>
   <button class="btn-filter" data-filter=".IoT">IoT</button>
+  <button class="btn-filter" data-filter=".Game">Game</button>
   <button class="btn-filter" data-filter=".Installation">Installation</button>
 </div>
 <div class="wrap">
   <div class="grid-sizer"></div>
   <a href="RABBOT.html">
-  <div class="grid-item MR Wearables"><img src="Projects/RABBOT/RABBOT.jpg" alt=""/>
+  <div class="grid-item MR Wearables Game"><img src="Projects/RABBOT/RABBOT.jpg" alt=""/>
     <div class="info-wrapper">
       <div class="name">RABBOT</div>
       <div class="memo">Thesis project</div>
@@ -48,6 +49,15 @@
       <div class="name">DiveIntoDigital</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2018 March</div>
+    </div>
+  </div>
+  </a>
+  <a href="MaidenPink.html">
+  <div class="grid-item Game"><img src="Projects/MaidenPink/MaidenPink.gif" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">MaidenPink</div>
+      <div class="memo">OCAD University, Toronto</div>
+      <div class="date">2018 April</div>
     </div>
   </div>
   </a>
