change specification for fonts

--- a/UniverseConcert.html
+++ b/UniverseConcert.html
@@ -4,22 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Universe Concert</title>
-
-
-
-      <link rel="stylesheet" href="css/style2.css">
-
-
+  <link rel="stylesheet" href="css/style2.css">
+  <link rel="icon" href="logo_White.png">
 </head>
 
 <body>
-
-  <head>
-  <title>Universe Concert</title>
-</head>
-
-<body>
-
   <div class='wrapper'>
   	<div id='UniverseConcert'>
       <div class='mouse-container'>
