Adjusting intro position and adding responsive css for phones

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yiyi Shao</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -27,7 +28,7 @@
     <li><a href="https://www.instagram.com/drunkcatthepluto/" class="fa fa-lg fa-instagram"></a></li>
     </ul>
     </div>
-    <div>
+    <div id ="blocktext">
       <p class="block">
       Hi my name is Yiyi. I'm a maker, designer and developer.
       My research focuses on combining wearable technology and IoT to improve shared social awareness in mixed reality game experiences.
