--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Yiyi Shao</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="icon" href="logo_White.png">
 </head>
 
 <body>
@@ -28,7 +27,7 @@
     <li><a href="https://www.instagram.com/drunkcatthepluto/" class="fa fa-lg fa-instagram"></a></li>
     </ul>
     </div>
-    <div id ="blocktext">
+    <div>
       <p class="block">
       Hi my name is Yiyi. I'm a maker, designer and developer.
       My research focuses on combining wearable technology and IoT to improve shared social awareness in mixed reality game experiences.
@@ -38,6 +37,7 @@
 
     <!-- particles.js container -->
     <div id="particles-js"></div>
+    <!-- Logo Animation -->
     <div id="bm"></div>
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
