--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Yiyi Shao</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="logo_White.png">
 </head>
