--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li><a href="https://www.instagram.com/drunkcatthepluto/" class="fa fa-lg fa-instagram"></a></li>
     </ul>
     </div>
-    <div>
+    <div class="textblock">
       <p class="block">
       Hi my name is Yiyi. I'm a maker, designer and developer.
       My research focuses on combining wearable technology and IoT to improve shared social awareness in mixed reality game experiences.
