--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Yiyi Shao</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="icon" href="logo_White.png">
 </head>
 
 <body>
