Adding teech details for each project

--- a/DiveIntoDigital.html
+++ b/DiveIntoDigital.html
@@ -30,6 +30,8 @@
     </div>
       <img src="Projects/DiveIntoDigital/DiveIntoDigital_2.PNG" class='img_small'>
       <h1>DiveIntoDigital</h1>
+      <h3>Created for iPhone using Unity3D, GoogleVR, Adobe AfterEffects, XML feed.
+      </h3>
       <h2>Summary</h2>
       <p>Data visualization of Google search trends in Virtual Reality which focuses on the mobile brands from 2011 until now.</p>
       <p>Group members: Feng Yuan, Jad Rabbaa and Yiyi Shao</p>
