--- a/EmoLace.html
+++ b/EmoLace.html
@@ -30,6 +30,7 @@
       </div>
       <img src="Projects/EmoLace/EmoLace_1.jpg" class='img_small'>
       <h1>EmoLace</h1>
+      <h3>Created using Particle photon, C++, REST API, RSSI, LEDs and fabrics</h3>
       <h2>Summary</h2>
       <p>Ever wonder what other people are feeling right now?
         Emolace is a fashion accessory reading emotional tweets from all over the world. It changes colors depending on different hashtags used. By tracking the sharing of the hashtags: #happy #sad #ew #scared and #mad, Emolace tells the current emotion of the ever-updating internet. The speed of blinking is based on the strength of WiFi signal, which represents how well as an individual is connected to the cyber world.
