--- a/LovMeLovU.html
+++ b/LovMeLovU.html
@@ -30,6 +30,7 @@
     </div>
       <img src="Projects/LovMeLovU/LovMeLovU_1.jpg" class='img_small'>
       <h1>LovMeLovU</h1>
+      <h3>Created using Particle photon, C++, REST API and 3D printing</h3>
       <h2>Summary</h2>
   <p>
     LuvMeLuvU is a set of two smart pillows designed for long distance relationship. They can detect and send the user’s missing to their caring one in any corner of the world. The progress bar on the pillows can let them know how much they currently miss each other. When both of the users are in the same Missing Level, synced vibrations from two pillows will get closer to their hearts.
