--- a/Mai.html
+++ b/Mai.html
@@ -29,6 +29,7 @@
       </div>
       <img src="Projects/Mai/Mai_1.jpg" class='img_small'>
       <h1>Mai</h1>
+      <h3>Created using Unity3D, Blender and Arduino</h3>
       <h2>Summary</h2>
         <p>Mai is an interactive art installation focusing on the theme of the environmental issue in China. I have collected the daily average data of PM2.5 between 2012 to 2015 in Shanghai, visualizing them into Chinese watercolor painting.
           Two objects were placed in front of the painting, one is a lantern representing the human civilization and the other one is a bottle of the plant which represents nature. It’s the audience's choice to choose which object to interact with. If you get closer to the lantern, the painting will disappear in the dark. If you hold them or touch the plant, the plant will start to talk to you heart-to-heart.
