--- a/MaidenPink.html
+++ b/MaidenPink.html
@@ -27,6 +27,7 @@
       </div>
       <img src="Projects/MaidenPink/MaidenPink2.png" class='img_small'>
       <h1>MaidenPink</h1>
+      <h3>Created using Adobe Photoshop, Wacom and Game Maker</h3>
       <h2>Summary</h2>
 
   <p>
