--- a/MoonGaze.html
+++ b/MoonGaze.html
@@ -28,6 +28,7 @@
       </div>
       <img src="Projects/MoonGaze/MoonGaze_1.jpg" class='img_small'>
       <h1>MoonGaze</h1>
+      <h3>Created using Arduino IDE, C, Feather M0 and PubNub</h3>
       <h2>Summary</h2>
       <p>A wearable interactive partner finder. A project by Yiyi Shao and Finlay Braithwaite for DIGF6037, Creation and Computation, Digital Futures, OCAD University.</p>
       <p>My responsibilities: concept developing, designning, physical making</p>
