--- a/RABBOT.html
+++ b/RABBOT.html
@@ -27,6 +27,8 @@
       </div>
       <img src="Projects/RABBOT/RABBOT_1.jpg" class='img_small'>
       <h1>RABBOT</h1>
+      <h3>Created for iPads, Andriod phones and Gear VR using Unity3D, Node.js, Socket.IO, Particle API, OculusVR, Vuforia, Blender, Adobe Illustrator, Particle Photon, 3D printing and Laser cutting
+      </h3>
       <h2>Summary</h2>
       <img src="Projects/RABBOT/arappdesign.png" class='img_medium'>
       <img src="Projects/RABBOT/RABBOT.gif" class='img_medium'>
