--- a/Sleepers.html
+++ b/Sleepers.html
@@ -27,6 +27,7 @@
       </div>
       <img src="Projects/Sleepers/Sleepers_1.jpg" class='img_small'>
       <h1>Sleepers</h1>
+      <h3>Created using Particle photon, REST API, IFTTT, C++ and Laser cutting</h3>
       <h2>Summary</h2>
   <p>
     A experimental research project at Social Body Lab.
