--- a/TheHats.html
+++ b/TheHats.html
@@ -30,7 +30,7 @@
       </div>
       <img src="Projects/TheHats/TheHats.jpg" class='img_small'>
       <h1>The Hats</h1>
-
+      <h3>Created using Arduino IDE, Circuit playground, C, and LEDs</h3>
       <h2>Summary</h2>
       <p>The hats are the experiments of using Circuit Playground board. They can detect sound, movement and touch. The Hats are designed for women’s safeties when going home alone at evening, but it can also be worn for fun.
       </p>
