--- a/UniverseConcert.html
+++ b/UniverseConcert.html
@@ -30,6 +30,7 @@
       </div>
       <img src="Projects/UniverseConcert/UniverseConcert_1.png" class='img_small'>
       <h1>Universe Concert</h1>
+      <h3>Created using Unity3D, Socket.IO and Adobe Photoshop</h3>
       <h2>Summary</h2>
   <p>Hello dreamers
 Have you ever wondered what the galaxy smells like and tastes like? Even sounds like?
@@ -38,16 +39,12 @@ The answers are all in the small cup
 And even more exciting, may we invite you to get your smartphone and enter wray.pro/Galaxy from your browser. you can control your own star by holding it and turning around
 Today we are going to make your dream come true, enjoy
 –Intro
-It’s a multi-sensory performance I worked with Sam Wray (also known as 2xAA) which took place at the Immersive Vision Theatre (Dome). People are invited to use their mobile phone to interact with the dome by becoming a star in the universe. After entering the URL, everyone can control their own star and make a beautiful sound, it has eventually become a concert. At the same time, raspberry rum jelly shots were served to make the multisensory experience as the center of Milky Way smells like raspberry and taste like rum.</p>
+It’s a multi-sensory performance which took place at the Immersive Vision Theatre (Dome). People are invited to use their mobile phone to interact with the dome by becoming a star in the universe. After entering the URL, everyone can control their own star and make a beautiful sound, it has eventually become a concert. At the same time, raspberry rum jelly shots were served to make the multisensory experience as the center of Milky Way smells like raspberry and taste like rum.
+</p>
+<p>Group members: Sam Wray (2XAA) and Yiyi shao</p>
+<p>My responsibility: User experience design and Artwork design</p>
 <img src="Projects/UniverseConcert/UniverseConcert.gif" class='img_small'>
 
-
-      <h2>Objective</h2>
-<p>...</p>
-
-<p>...</p>
-      <h2>Action</h2>
-<p></p>
       <h1 class='footer'>...</h1>
     </div>
   </div>
