--- a/Teleportation.html
+++ b/Teleportation.html
@@ -38,16 +38,11 @@
       </div>
       <img src="Projects/Teleportation/Teleportation.jpg" class='img_small'>
       <h1>Teleportation</h1>
+      <p>Created using Arduino and P5.js</p>
       <h2>Summary</h2>
   <p>According to Moore’s Law, technology is developing so fast these days. We have no idea what the transportation will be like in the future, just like people from 500 years ago have no idea we can cross the Atlantic within a day by airplane. Let’s take a peak from this interactive installation and to feel what’s teleportation or even worse, what if something goes wrong in this process?</p>
 
 
-      <h2>Objective</h2>
-<p>...</p>
-
-<p>...</p>
-      <h2>Action</h2>
-<p></p>
       <h1 class='footer'>...</h1>
     </div>
   </div>
