Adding graphic design projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <nav class="btn three">
       <ul>
         <li><a href="index.html">Hello!</a></li>
-        <li><a href="portfolio.html" id="active">Recent Projects</a></li>
+        <li><a href="portfolio.html" id="active">Portfolio</a></li>
       </ul>
     </nav>
     </div>
@@ -28,9 +28,10 @@
 <div class="button-group filters-button-group">
   <button class="btn-filter active" data-filter=".grid-item">All</button>
   <button class="btn-filter" data-filter=".Wearables">Wearables</button>
-  <button class="btn-filter" data-filter=".MR">MR</button>
-  <button class="btn-filter" data-filter=".IoT">IoT</button>
   <button class="btn-filter" data-filter=".Game">Game</button>
+  <button class="btn-filter" data-filter=".MR">Mixed Reality</button>
+  <button class="btn-filter" data-filter=".GraphicDesign">Graphic Design</button>
+  <button class="btn-filter" data-filter=".IoT">IoT</button>
   <button class="btn-filter" data-filter=".Installation">Installation</button>
 </div>
 <div class="wrap">
@@ -143,7 +144,24 @@
     </div>
   </div>
   </a>
-  <div class="grid-item"><img src="" alt=""/></div>
+  <a href="CourseIcon.html">
+  <div class="grid-item GraphicDesign"><img src="Projects/CourseIcon/CourseIcon_2.png" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">Course Icon</div>
+      <div class="memo">In-house Design Studio, Plymouth University, UK</div>
+      <div class="date">2015</div>
+    </div>
+  </div>
+  </a>
+  <a href="Flyer.html">
+  <div class="grid-item GraphicDesign"><img src="Projects/Flyer/Flyer_1.png" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">Course Icon</div>
+      <div class="memo">In-house Design Studio, Plymouth University, UK</div>
+      <div class="date">2015</div>
+    </div>
+  </div>
+  </a>
 </div>
 
 
