--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="btn three">
       <ul>
         <li><a href="index.html" id="active">Hello!</a></li>
-        <li><a href="portfolio.html">Recent Projects</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
       </ul>
     </nav>
     </div>
