--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,11 @@
 <body>
 
   <div id ="topbar" style ="width = 100%">
+    <a href="index.html">
     <div id ="logo">
       <img src="logo_White.png" style="width:100%; height:100%;">
     </div>
+    </a>
     <div id="btnwrapper">
     <nav class="btn three">
       <ul>
