Adding name animation on home page, adding about page

--- a/PollHUEtion.html
+++ b/PollHUEtion.html
@@ -30,7 +30,7 @@
       </div>
       <img src="Projects/PollHUEtion/PollHuetion.JPG" class='img_small'>
       <h1>PollHUEtion</h1>
-      <h3>Created using Arduino IDE and Adobe Illustrator</h3>
+      <h3>Created using Arduino, C, and Adobe Illustrator</h3>
       <h2>Summary</h2>
       <p>
         An installation perceived data from YYZ airport departures, controlling three hairdryers to melt crayons by Arduino and p5.js.
