--- a/index.html
+++ b/index.html
@@ -16,30 +16,36 @@
       <ul>
         <li><a href="index.html" id="active">Hello!</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
     </div>
 
-<div id ="introcontainer">
-    <div id = "icons" class="socialbtns">
-    <ul>
-    <li><a href="https://github.com/Yiyis" class="fa fa-lg fa-github"></a></li>
-    <li><a href="https://www.linkedin.com/in/yiyishao/" class="fa fa-lg fa-linkedin"></a></li>
-    <li><a href="https://www.instagram.com/drunkcatthepluto/" class="fa fa-lg fa-instagram"></a></li>
-    </ul>
-    </div>
-    <div class="textblock">
+    <div id ="introcontainer">
+
       <p class="block">
-      Hi my name is Yiyi. I'm a maker, designer and developer.
-      My research focuses on combining wearable technology and IoT to improve shared social awareness in mixed reality game experiences.
+        Maker | Developer | Designer
       </p>
+  
     </div>
-  </div>
 
     <!-- particles.js container -->
     <div id="particles-js"></div>
     <!-- Logo Animation -->
     <div id="bm"></div>
+    <!-- Name Animation -->
+    <div class="container">
+    <div class="line">
+      <div class="square" id="square">Y</div>
+      <div class="square" >I</div>
+      <div class="square" >Y</div>
+      <div class="square" >I</div>
+      <div class="square" style="margin-left:30px;" >S</div>
+      <div class="square" >H</div>
+      <div class="square" >A</div>
+      <div class="square" >O</div>
+  </div>
+</div>
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -47,10 +53,10 @@
     <footer>
       <div class="footer">
       <small>&copy; Yiyi Shao <script type="text/javascript">
-var today = new Date()
-var year = today.getFullYear()
-document.write(year)
-</script>, All Rights Reserved </small></div>
+      var today = new Date()
+      var year = today.getFullYear()
+      document.write(year)
+    </script>, All Rights Reserved </small></div>
     </footer>
   </body>
 </html>
