--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@
       <ul>
         <li><a href="index.html">Hello!</a></li>
         <li><a href="portfolio.html" id="active">Portfolio</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
     </div>
