--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class ="wrapper">
+    <div>
     <nav class="btn three">
       <ul>
         <li><a href="index.html" id="active">Hello!</a></li>
@@ -26,7 +26,7 @@
       <p class="block">
         Maker | Developer | Designer
       </p>
-  
+
     </div>
 
     <!-- particles.js container -->
