--- a/about.html
+++ b/about.html
@@ -11,15 +11,22 @@
 </head>
 
 <body>
-    <div class ="wrapper">
+  <div style ="width = 100%">
+    <a href="index.html">
+    <div id ="logo">
+      <img src="logo_White.png" style="width:100%; height:100%;">
+    </div>
+    </a>
+    <div id="btnwrapper">
     <nav class="btn three">
       <ul>
         <li><a href="index.html">Hello!</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="about.html" id="active">About</a></li>
+        <li><a href="portfolio.html" id="active">Portfolio</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
     </div>
+  </div>
 
 <div id="AboutContainer">
   <img src="Yiyi.JPG" id='img_yiyi'>
