--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
     <nav class="btn three">
       <ul>
         <li><a href="index.html">Hello!</a></li>
-        <li><a href="portfolio.html" id="active">Portfolio</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html" id="active">About</a></li>
       </ul>
     </nav>
     </div>
