Adding downloadable CV

--- a/about.html
+++ b/about.html
@@ -29,7 +29,8 @@
   </div>
 
 <div id="AboutContainer">
-  <img src="Yiyi.JPG" id='img_yiyi'>
+  <div>
+  <img src="Yiyi.JPG" id='img_yiyi'></div>
   <div id="AboutTextContainer">
     <h1>About Me</h1>
     <p class="About"> Hi my name is Yiyi. I'm a maker, designer and developer.
@@ -44,13 +45,22 @@
     <br><b>GradEX </b> 2019 Exhibitor
     <br><b>Future Education Festival </b> 2018 Speaker
     <br><b>VRTO</b> 2018 Speaker</p>
-    <div id = "icons" class="socialbtns">
-    <ul>
-    <li><a href="https://github.com/Yiyis" class="fa fa-lg fa-github"></a></li>
-    <li><a href="https://www.linkedin.com/in/yiyishao/" class="fa fa-lg fa-linkedin"></a></li>
-    <li><a href="https://www.instagram.com/drunkcatthepluto/" class="fa fa-lg fa-instagram"></a></li>
-    </ul>
+    <h1>Resume/CV</h1>
+    <div style="padding-top:2vw;padding-bottom:2vw; float:left;">
+      <form method="get" action="CV.pdf">
+      <div class="content">
+          <button class="btn-download" type="submit">Download</button>
+          <span class="btn-open">Success</span>
     </div>
+    </form>
+    </div>
+  </div>
+  <div id = "icons" class="socialbtns">
+  <ul>
+  <li><a href="https://github.com/Yiyis" class="fa fa-lg fa-github"></a></li>
+  <li><a href="https://www.linkedin.com/in/yiyishao/" class="fa fa-lg fa-linkedin"></a></li>
+  <li><a href="https://www.instagram.com/drunkcatthepluto/" class="fa fa-lg fa-instagram"></a></li>
+  </ul>
   </div>
 </div>
 
