Fixed downloading problem

--- a/about.html
+++ b/about.html
@@ -47,12 +47,13 @@
     <br><b>VRTO</b> 2018 Speaker</p>
     <h1>Resume/CV</h1>
     <div style="padding-top:2vw;padding-bottom:2vw; float:left;">
-      <form method="get" action="CV.pdf">
+
       <div class="content">
-          <button class="btn-download" type="submit">Download</button>
+        <a href="CV.pdf" download>
+          <button class="btn-download">Download</button></a>
           <span class="btn-open">Success</span>
     </div>
-    </form>
+
     </div>
   </div>
   <div id = "icons" class="socialbtns">
