Updating about me page

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
   <img src="Yiyi.JPG" id='img_yiyi'></div>
   <div id="AboutTextContainer">
     <h1>About Me</h1>
-    <p class="About"> Hi my name is Yiyi. I'm a maker, designer and developer.
+    <p class="About"> Hi my name is Yiyi. I'm a maker, designer and developer. I'm originally from China and now living in Toronto.
       My research focuses on combining wearable technology and IoT to improve shared social awareness in mixed reality game experiences.</p>
     <p class="About">
       A bubbly and amiable character, I love spending time building aquarium landscape and turning my apartment into a forest.
@@ -44,7 +44,7 @@
     <br><b>WTF – What the Futures?</b> 2019 Exhibitor
     <br><b>GradEX </b> 2019 Exhibitor
     <br><b>Future Education Festival </b> 2018 Speaker
-    <br><b>VRTO</b> 2018 Speaker</p>
+    <br><b>VRTO</b> 2018 Workshop instructor</p>
     <h1>Resume/CV</h1>
     <div style="padding-top:2vw;padding-bottom:2vw; float:left;">
 
