--- a/about.html
+++ b/about.html
@@ -42,9 +42,10 @@
     <p class="About"><b>IUW</b> 2018 Speaker
     <br><b>Dames Making Games & Social Body Lab</b> 2018-2019 Workshop instructor
     <br><b>WTF – What the Futures?</b> 2019 Exhibitor
+    <br><b>LevelUp </b> 2019 Exhibitor
     <br><b>GradEX </b> 2019 Exhibitor
-    <br><b>Future Education Festival </b> 2018 Speaker
-    <br><b>VRTO</b> 2018 Workshop instructor</p>
+    <br><b>Future Education Festival </b> 2019 Exhibitor
+    <br><b>VRTO</b> 2019 Workshop instructor</p>
     <h1>Resume/CV</h1>
     <div style="padding-top:2vw;padding-bottom:2vw; float:left;">
 
