Updating about me page

--- a/about.html
+++ b/about.html
@@ -40,9 +40,11 @@
     </p>
     <h1>Exhibits, Talks & Workshops</h1>
     <p class="About"><b>IUW</b> 2018 Speaker
-    <br><b>Dames Making Games & Social Body Lab</b> 2018-2019 Workshop instructor
+    <br><b>DF Openshow</b> 2018,2019 Exhibitor
+    <br><b>Dames Making Games & Social Body Lab</b> 2018,2019 Workshop instructor
     <br><b>WTF – What the Futures?</b> 2019 Exhibitor
     <br><b>LevelUp </b> 2019 Exhibitor
+    <br><b>FITC </b> 2019 Exhibitor
     <br><b>GradEX </b> 2019 Exhibitor
     <br><b>Future Education Festival </b> 2019 Exhibitor
     <br><b>VRTO</b> 2019 Workshop instructor</p>
