--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Yiyi Shao, Maker | Developer | Designer, OCAD University ">
+  <!-- Primary Meta Tags -->
   <title>Yiyi Shao</title>
+  <meta name="title" content="Yiyi Shao">
+  <meta name="description" content="Yiyi Shao, Maker | Developer | Designer, OCAD University ">
+  <meta name="keywords" content="Yiyi Shao, OCAD University, Toronto, Maker, Designer, Developer, Social Body Lab, VR/AR, Wearables, Mixed Reality, IoT, Game">
+  <meta name="author" content="Yiyi Shao">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://yiyishao.org/">
+  <meta property="og:title" content="Yiyi Shao">
+  <meta property="og:description" content="Yiyi Shao, Maker | Developer | Designer, OCAD University ">
+  <meta property="og:image" content="Yiyi.JPG">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://yiyishao.org/">
+  <meta property="twitter:title" content="Yiyi Shao">
+  <meta property="twitter:description" content="Yiyi Shao, Maker | Developer | Designer, OCAD University ">
+  <meta property="twitter:image" content="Yiyi.JPG">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="icon" href="logo_White.png">
