--- a/RABBOT.html
+++ b/RABBOT.html
@@ -55,6 +55,8 @@ solely focus on the HMD wearer but also other third-party audiences, whether the
 participating observers or ambient observers. </p>
 
       <h2>Action</h2>
+      <img src="Projects/RABBOT/roadmap.jpg" class='img_medium'>
+      <img src="Projects/RABBOT/Methdology.jpg" class='img_medium'>
       <img src="Projects/RABBOT/PrototypeMap.jpg" class='img_medium'>
       <img src="Projects/RABBOT/SystemDiagram.jpg" class='img_medium'>
       <img src="Projects/RABBOT/Rabbot3D.png" class='img_medium'>
