Remove hyper link for flyer design

--- a/portfolio.html
+++ b/portfolio.html
@@ -156,15 +156,13 @@
     </div>
   </div>
   </a>
-  <a href="Flyer.html">
   <div class="grid-item GraphicDesign"><img src="Projects/Flyer/Flyer_1.png" alt=""/>
     <div class="info-wrapper">
-      <div class="name">Course Icon</div>
+      <div class="name">Flyer Design</div>
       <div class="memo">In-house Design Studio, Plymouth University, UK</div>
       <div class="date">2015</div>
     </div>
   </div>
-  </a>
 </div>
 
 
