Adding motion graphics project

--- a/portfolio.html
+++ b/portfolio.html
@@ -147,6 +147,15 @@
     </div>
   </div>
   </a>
+  <a href="Sleepy.html">
+  <div class="grid-item GraphicDesign"><img src="Projects/Sleepy/Sleepy2.gif" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">Sleepy Motion Graphics</div>
+      <div class="memo">OCAD University, Toronto</div>
+      <div class="date">2018</div>
+    </div>
+  </div>
+  </a>
   <a href="CourseIcon.html">
   <div class="grid-item GraphicDesign"><img src="Projects/CourseIcon/CourseIcon_2.png" alt=""/>
     <div class="info-wrapper">
