Adding leaflet design

--- a/portfolio.html
+++ b/portfolio.html
@@ -172,6 +172,15 @@
       <div class="date">2015</div>
     </div>
   </div>
+  <a href="Leaflets.html">
+  <div class="grid-item GraphicDesign"><img src="Projects/Leaflets/Trifold_Leaflet.jpg" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">Leaflet Design</div>
+      <div class="memo">In-house Design Studio, Plymouth University, UK</div>
+      <div class="date">2015</div>
+    </div>
+  </div>
+  </a>
 </div>
 
 
