Adding scholarship promotion design

--- a/portfolio.html
+++ b/portfolio.html
@@ -146,6 +146,15 @@
       <div class="date">2016</div>
     </div>
   </div>
+  <a href="ScholarshipPromotion.html">
+  <div class="grid-item GraphicDesign"><img src="Projects/ScholarshipPromotion/ScholarshipPromotionPoster_3.jpg" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">Scholarship Promotion Design</div>
+      <div class="memo">In-house Design Studio, Plymouth University, UK</div>
+      <div class="date">2015</div>
+    </div>
+  </div>
+  </a>
   </a>
   <a href="Sleepy.html">
   <div class="grid-item GraphicDesign"><img src="Projects/Sleepy/Sleepy2.gif" alt=""/>
