--- a/Flyer.html
+++ b/Flyer.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Leaflets</title>
+  <title>Flyer</title>
   <link rel="stylesheet" href="css/style2.css">
   <link rel="icon" href="logo_White.png">
 </head>
 
 <body>
   <div class='wrapper'>
-  	<div id='Leaflets'>
+  	<div id='Flyer'>
       <div class='mouse-container'>
         <div class='mouse'>
           <span class='scroll-down'></span>
@@ -25,16 +25,16 @@
         </div>
       </div>
     </div>
-      <img src="Projects/Leaflets/Leaflet.png" class='img_small'>
-      <h1>Leaflet Design</h1>
+      <img src="Projects/Flyer/Flyer_1.png" class='img_small'>
+      <h1>Flyer Design</h1>
       <h3>Created using Adobe Illustrator, Adobe Photoshop</h3>
       <h2>Summary</h2>
   <p>
-    Leaflet design for Care Leavers Service at Plymouth University
+    Flyer design for Walk-on Exhibition at Plymouth University
   </p>
 
-        <img src="Projects/Leaflets/Trifold_Leaflet_2.jpg" class='img_medium'>
-        <img src="Projects/Leaflets/Trifold_Leaflet_3.jpg" class='img_medium'>
+        <img src="Projects/Flyer/Flyer_2.jpg" class='img_medium'>
+
 
 
 </body>
