--- a/portfolio.html
+++ b/portfolio.html
@@ -174,6 +174,7 @@
     </div>
   </div>
   </a>
+  <a href="Flyer.html">
   <div class="grid-item GraphicDesign"><img src="Projects/Flyer/Flyer_1.png" alt=""/>
     <div class="info-wrapper">
       <div class="name">Flyer Design</div>
@@ -181,6 +182,7 @@
       <div class="date">2015</div>
     </div>
   </div>
+  </a>
   <a href="Leaflets.html">
   <div class="grid-item GraphicDesign"><img src="Projects/Leaflets/Trifold_Leaflet.jpg" alt=""/>
     <div class="info-wrapper">
