Updating Maiden pink

--- a/MaidenPink.html
+++ b/MaidenPink.html
@@ -25,6 +25,9 @@
         </div>
       </div>
       </div>
+      <div class="video-wrapper">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/R-dknouvwcg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
       <img src="Projects/MaidenPink/MaidenPink2.png" class='img_small'>
       <h1>MaidenPink</h1>
       <h3>Created using Adobe Photoshop, Wacom and Game Maker</h3>
@@ -37,7 +40,7 @@
   <p>My responsibilities: Animation, Character Design</p>
 
   <p>Full working diary can be found at <a href="https://shao-yiyi.format.com/blog">here</a></p>
-
+  <p>Download <a href="https://drive.google.com/open?id=138_7HyUf-9qz4ousf2WHVNRlZnB_0A_h">game</a> to play!</P>
       <h2>Objective</h2>
       <p>
       The primary emotional cue of Maiden Pink is the relationship between mother and daughter. The game starts with the player being a little girl and traveling with her mother in a fantasy world. The mother is always protecting her child and won’t let the daughter away from her sight. However, the mother gets injured seriously at the end of the first level and can’t keep protecting the daughter through the journey, so the player as a little girl needs to be independent and learn skills and responsibility to save her mother.
