--- a/portfolio.html
+++ b/portfolio.html
@@ -196,7 +196,7 @@
 
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-  <script src='http://npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js'></script>
+  <script src='https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js'></script>
   <script src='http://npmcdn.com/imagesloaded@4/imagesloaded.pkgd.js'></script>
   <script  src="js/portfolio.js"></script>
 
