--- a/CourseIcon.html
+++ b/CourseIcon.html
@@ -39,10 +39,15 @@
       </p>
 
       <h2>Outcome</h2>
-      <p>Online Courses with the new design were featured on the font page with siginificant traffics and downloads.</p>
+      <p>Online courses with the new design were featured on the font page with siginificant traffics and downloads.</p>
         <img src="Projects/CourseIcon/CourseIcon_4.png" class='img_medium'>
         <img src="Projects/CourseIcon/CourseIcon_5.png" class='img_medium'>
         <img src="Projects/CourseIcon/CourseIcon_2.jpg" class='img_medium'>
+        <p class="caption">Flyer design</p>
+        <img src="Projects/CourseIcon/CourseIcon_flyer.jpg" class='img_medium'>
+        <p class="caption">Banner design</p>
+        <img src="Projects/CourseIcon/CourseIcon_banner.jpg" class='img_medium'>
+
 
 
 </body>
