Adding watercolour project

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,7 @@
   <button class="btn-filter" data-filter=".Game">Game</button>
   <button class="btn-filter" data-filter=".MR">Mixed Reality</button>
   <button class="btn-filter" data-filter=".GraphicDesign">Graphic Design</button>
+  <button class="btn-filter" data-filter=".Illustration">Illustration</button>
   <button class="btn-filter" data-filter=".IoT">IoT</button>
   <button class="btn-filter" data-filter=".Installation">Installation</button>
 </div>
@@ -162,6 +163,16 @@
       <div class="name">Sleepy Motion Graphics</div>
       <div class="memo">OCAD University, Toronto</div>
       <div class="date">2018</div>
+    </div>
+  </div>
+  </a>
+  </a>
+  <a href="FloralWatercolour.html">
+  <div class="grid-item Illustration"><img src="Projects/FloralWatercolour/FloralWatercolour_1.jpg" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">Floral watercolour</div>
+      <div class="memo">Shanghai & Singapore</div>
+      <div class="date">2016</div>
     </div>
   </div>
   </a>
