--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       <div id="AboutTextContainer">
         <h1>About Me</h1>
         <p class="About"> Hi, my name is Yiyi. I'm a maker, designer and developer. I'm originally from China and now living in downtown Toronto.
-          My research focuses on combining wearable technology and IoT to improve shared social awareness in mixed reality game experiences.</p>
+          My research focuses on combining wearable technology, aumented reality and IoT to improve shared social awareness in mixed reality game experiences.</p>
         <p class="About">
           A bubbly and amiable character, I love spending time building aquarium landscape and turning my apartment into a forest.
         </p>
