--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,9 @@
   <button class="btn-filter" data-filter=".Game">Game</button>
   <button class="btn-filter" data-filter=".MR">Mixed Reality</button>
   <button class="btn-filter" data-filter=".GraphicDesign">Graphic Design</button>
-  <button class="btn-filter" data-filter=".Illustration">Illustration</button>
-  <button class="btn-filter" data-filter=".IoT">IoT</button>
+  <button class="btn-filter" data-filter=".Animation">Animation</button>
   <button class="btn-filter" data-filter=".Installation">Installation</button>
+
 </div>
 <div class="wrap">
   <div class="grid-sizer"></div>
@@ -59,7 +59,7 @@
   </div>
   </a>
   <a href="MaidenPink.html">
-  <div class="grid-item Game"><img src="Projects/MaidenPink/MaidenPink.gif" alt=""/>
+  <div class="grid-item Game Animation"><img src="Projects/MaidenPink/MaidenPink.gif" alt=""/>
     <div class="info-wrapper">
       <div class="name">MaidenPink</div>
       <div class="memo">OCAD University, Toronto</div>
@@ -103,6 +103,13 @@
     </div>
   </div>
   </a>
+  <div class="grid-item Animation"><img src="Projects/Animations/Animation_3.gif" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">AfterEffects Animation</div>
+      <div class="memo">Shanghai</div>
+      <div class="date">2016</div>
+    </div>
+  </div>
   <a href="LovMeLovU.html">
   <div class="grid-item Wearables IoT"><img src="Projects/LovMeLovU/LovMeLovU.JPG" alt=""/>
     <div class="info-wrapper">
@@ -158,7 +165,7 @@
   </a>
   </a>
   <a href="Sleepy.html">
-  <div class="grid-item GraphicDesign"><img src="Projects/Sleepy/Sleepy2.gif" alt=""/>
+  <div class="grid-item Animation"><img src="Projects/Sleepy/Sleepy2.gif" alt=""/>
     <div class="info-wrapper">
       <div class="name">Sleepy Motion Graphics</div>
       <div class="memo">OCAD University, Toronto</div>
@@ -166,12 +173,10 @@
     </div>
   </div>
   </a>
-  </a>
-  <a href="FloralWatercolour.html">
-  <div class="grid-item Illustration"><img src="Projects/FloralWatercolour/FloralWatercolour_1.jpg" alt=""/>
+  <div class="grid-item Animation"><img src="Projects/Animations/Animation_4.gif" alt=""/>
     <div class="info-wrapper">
-      <div class="name">Floral watercolour</div>
-      <div class="memo">Shanghai & Singapore</div>
+      <div class="name">C4D Animation</div>
+      <div class="memo">Shanghai</div>
       <div class="date">2016</div>
     </div>
   </div>
@@ -200,6 +205,36 @@
       <div class="name">Leaflet Design</div>
       <div class="memo">In-house Design Studio, Plymouth University, UK</div>
       <div class="date">2015</div>
+    </div>
+  </div>
+  </a>
+  <div class="grid-item Animation"><img src="Projects/Animations/Animation_1.gif" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">Blender Animation</div>
+      <div class="memo">Shanghai</div>
+      <div class="date">2016</div>
+    </div>
+  </div>
+  <div class="grid-item Animation"><img src="Projects/Animations/Animation_2.gif" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">Blender Animation</div>
+      <div class="memo">Shanghai</div>
+      <div class="date">2016</div>
+    </div>
+  </div>
+  <div class="grid-item Animation"><img src="Projects/Animations/Animation_5.gif" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">AfterEffects Animation</div>
+      <div class="memo">Shanghai</div>
+      <div class="date">2016</div>
+    </div>
+  </div>
+  <a href="FloralWatercolour.html">
+  <div class="grid-item GraphicDesign"><img src="Projects/FloralWatercolour/FloralWatercolour_1.jpg" alt=""/>
+    <div class="info-wrapper">
+      <div class="name">Floral watercolour</div>
+      <div class="memo">Shanghai & Singapore</div>
+      <div class="date">2016</div>
     </div>
   </div>
   </a>
