Clean code with Prettier

--- a/index.html
+++ b/index.html
@@ -1,49 +1,58 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary Meta Tags -->
+    <title>Yiyi Shao</title>
+    <meta name="title" content="Yiyi Shao" />
+    <meta
+      name="description"
+      content="Yiyi Shao, Maker | Developer | Designer, OCAD University "
+    />
+    <meta
+      name="keywords"
+      content="Yiyi Shao, OCAD University, Toronto, Maker, Designer, Developer, Social Body Lab, VR/AR, Wearables, Mixed Reality, IoT, Game"
+    />
+    <meta name="author" content="Yiyi Shao" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yiyishao.org/" />
+    <meta property="og:title" content="Yiyi Shao" />
+    <meta
+      property="og:description"
+      content="Yiyi Shao, Maker | Developer | Designer, OCAD University "
+    />
+    <meta property="og:image" content="Yiyi.JPG" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://yiyishao.org/" />
+    <meta property="twitter:title" content="Yiyi Shao" />
+    <meta
+      property="twitter:description"
+      content="Yiyi Shao, Maker | Developer | Designer, OCAD University "
+    />
+    <meta property="twitter:image" content="Yiyi.JPG" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="icon" href="logo_White.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Primary Meta Tags -->
-  <title>Yiyi Shao</title>
-  <meta name="title" content="Yiyi Shao">
-  <meta name="description" content="Yiyi Shao, Maker | Developer | Designer, OCAD University ">
-  <meta name="keywords" content="Yiyi Shao, OCAD University, Toronto, Maker, Designer, Developer, Social Body Lab, VR/AR, Wearables, Mixed Reality, IoT, Game">
-  <meta name="author" content="Yiyi Shao">
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://yiyishao.org/">
-  <meta property="og:title" content="Yiyi Shao">
-  <meta property="og:description" content="Yiyi Shao, Maker | Developer | Designer, OCAD University ">
-  <meta property="og:image" content="Yiyi.JPG">
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://yiyishao.org/">
-  <meta property="twitter:title" content="Yiyi Shao">
-  <meta property="twitter:description" content="Yiyi Shao, Maker | Developer | Designer, OCAD University ">
-  <meta property="twitter:image" content="Yiyi.JPG">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="icon" href="logo_White.png">
-</head>
-
-<body>
+  <body>
     <div>
-    <nav class="btn three">
-      <ul>
-        <li><a href="index.html" id="active">Hello!</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
+      <nav class="btn three">
+        <ul>
+          <li><a href="index.html" id="active">Hello!</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
     </div>
 
-    <div id ="introcontainer">
-
+    <div id="introcontainer">
       <p class="block">
         Maker | Developer | Designer
       </p>
-
     </div>
 
     <!-- particles.js container -->
@@ -52,28 +61,38 @@
     <div id="bm"></div>
     <!-- Name Animation -->
     <div class="container">
-    <div class="line">
-      <div class="square" id="square">Y</div>
-      <div class="square" >I</div>
-      <div class="square" >Y</div>
-      <div class="square" >I</div>
-      <div class="square" style="margin-left:30px;" >S</div>
-      <div class="square" >H</div>
-      <div class="square" >A</div>
-      <div class="square" >O</div>
-  </div>
-</div>
+      <div class="line">
+        <div class="square" id="square">Y</div>
+        <div class="square">I</div>
+        <div class="square">Y</div>
+        <div class="square">I</div>
+        <div class="square" style="margin-left:30px;">S</div>
+        <div class="square">H</div>
+        <div class="square">A</div>
+        <div class="square">O</div>
+      </div>
+    </div>
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script  src="js/index.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"
+    ></script>
+    <script src="js/index.js"></script>
     <footer>
       <div class="footer">
-      <small>&copy; Yiyi Shao <script type="text/javascript">
-      var today = new Date()
-      var year = today.getFullYear()
-      document.write(year)
-    </script>, All Rights Reserved </small></div>
+        <small
+          >&copy; Yiyi Shao
+          <script type="text/javascript">
+            var today = new Date();
+            var year = today.getFullYear();
+            document.write(year);</script
+          >, All Rights Reserved
+        </small>
+      </div>
     </footer>
   </body>
 </html>
