--- a/about.html
+++ b/about.html
@@ -1,86 +1,103 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Yiyi Shao</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="icon" href="logo_White.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yiyi Shao</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="icon" href="logo_White.png">
-</head>
-
-<body>
-  <div style ="width = 100%">
-    <a href="index.html">
-    <div id ="logo">
-      <img src="logo_White.png" style="width:100%; height:100%;">
+  <body>
+    <div style="width = 100%">
+      <a href="index.html">
+        <div id="logo">
+          <img src="logo_White.png" style="width:100%; height:100%;" />
+        </div>
+      </a>
+      <div id="btnwrapper">
+        <nav class="btn three">
+          <ul>
+            <li><a href="index.html">Hello!</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html" id="active">About</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
-    </a>
-    <div id="btnwrapper">
-    <nav class="btn three">
-      <ul>
-        <li><a href="index.html">Hello!</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="about.html" id="active">About</a></li>
-      </ul>
-    </nav>
-    </div>
-  </div>
 
-  <div id="AboutContainer">
-    <div>
-    <img src="Yiyi.JPG" id='img_yiyi'></div>
+    <div id="AboutContainer">
+      <div>
+        <img src="Yiyi.JPG" id="img_yiyi" />
+      </div>
+
       <div id="AboutTextContainer">
         <h1>About Me</h1>
-        <p class="About"> Hi, my name is Yiyi. I'm a maker, designer and developer. I'm originally from China and now living in downtown Toronto.
-          My research focuses on combining wearable technology, augmented reality and IoT to improve shared social awareness in mixed reality game experiences.</p>
         <p class="About">
-          A bubbly and amiable character, I love spending time building aquarium landscape and turning my apartment into a forest.
+          Hi, my name is Yiyi. I'm a maker, designer and developer. I'm
+          originally from China and now living in downtown Toronto. My research
+          focuses on combining wearable technology, augmented reality and IoT to
+          improve shared social awareness in mixed reality game experiences.
+        </p>
+        <p class="About">
+          A bubbly and amiable character, I love spending time building aquarium
+          landscape and turning my apartment into a forest.
         </p>
         <h1>Exhibits, Talks & Workshops</h1>
-        <p class="About"><b>IUW</b> 2018 Speaker
-        <br><b>DF Openshow</b> 2018,2019 Exhibitor
-        <br><b>Dames Making Games & Social Body Lab</b> 2018,2019 Workshop instructor
-        <br><b>WTF – What the Futures?</b> 2019 Exhibitor
-        <br><b>LevelUp </b> 2019 Exhibitor
-        <br><b>FITC </b> 2019 Exhibitor
-        <br><b>GradEX </b> 2019 Exhibitor
-        <br><b>Future Education Festival </b> 2019 Exhibitor
-        <br><b>VRTO</b> 2019 Workshop instructor</p>
+        <p class="About">
+          <b>IUW</b> 2018 Speaker <br /><b>DF Openshow</b> 2018,2019 Exhibitor<br />
+          <b>Dames Making Games & Social Body Lab</b> 2018,2019 Workshop instructor <br />
+          <b>WTF – What the Futures?</b> 2019 Exhibitor<br />
+          <b>LevelUp </b> 2019 Exhibitor <br />
+          <b>FITC </b> 2019 Exhibitor <br />
+          <b>GradEX </b> 2019 Exhibitor <br />
+          <b>Future Education Festival </b>2019 Exhibitor <br />
+          <b>VRTO</b> 2019 Workshop instructor
+        </p>
         <h1>Resume/CV</h1>
 
         <div style="padding-top:2vw;padding-bottom:2vw; float:left;">
           <div class="content">
             <a href="CV.pdf" download>
-              <button class="btn-download">Download</button></a>
-              <span class="btn-open">Success</span>
+              <button class="btn-download">Download</button></a
+            >
+            <span class="btn-open">Success</span>
           </div>
         </div>
-        </div>
-        <div id = "icons" class="socialbtns">
+      </div>
+      <div id="icons" class="socialbtns">
         <ul>
-        <li><a href="https://github.com/Yiyis" class="fa fa-lg fa-github"></a></li>
-        <li><a href="https://www.linkedin.com/in/yiyishao/" class="fa fa-lg fa-linkedin"></a></li>
-        <li><a href="https://www.instagram.com/drunkcatthepluto/" class="fa fa-lg fa-instagram"></a></li>
+          <li>
+            <a href="https://github.com/Yiyis" class="fa fa-lg fa-github"></a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/yiyishao/" class="fa fa-lg fa-linkedin"></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/drunkcatthepluto/" class="fa fa-lg fa-instagram"></a>
+          </li>
         </ul>
-        </div>
-  </div>
+      </div>
+    </div>
 
-  <!-- particles.js container -->
-  <div id="particles-js"></div>
+    <!-- particles.js container -->
+    <div id="particles-js"></div>
 
-  <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
-  <script type="text/javascript" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script  src="js/index.js"></script>
+    <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.2/lottie.js"></script>
+    <script type="text/javascript"  src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="js/index.js"></script>
+
     <footer>
       <div class="footer">
-      <small>&copy; Yiyi Shao <script type="text/javascript">
-      var today = new Date()
-      var year = today.getFullYear()
-      document.write(year)
-    </script>, All Rights Reserved </small></div>
+        <small>&copy; Yiyi Shao
+          <script type="text/javascript">
+            var today = new Date();
+            var year = today.getFullYear();
+            document.write(year);</script>, All Rights Reserved
+        </small>
+      </div>
     </footer>
   </body>
 </html>
