--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,14 @@
           </div>
         </div>
       </a>
+      <div class="grid-item Animation">
+        <img src="Projects/Animations/Animation_6.gif" alt="" />
+        <div class="info-wrapper">
+          <div class="name">Blender Animation</div>
+          <div class="memo">Toronto</div>
+          <div class="date">2019</div>
+        </div>
+      </div>
       <a href="MaidenPink.html">
         <div class="grid-item Game Animation">
           <img src="Projects/MaidenPink/MaidenPink.gif" alt="" />
